<package format="2">
    <name>hello_8_error_state</name>
    <version>0.0.0</version>
    <description>
        This package contains the components of the hello_8_error_state package
    </description>
    <maintainer email="orocos-dev@lists.mech.kuleuven.be">Orocos Developers</maintainer>
    <license>BSD</license>
    <depend>rtt</depend>
    <depend>ocl</depend>
</package>
